tdf#160162 Fix hyperlink update in Draw

Changing the links to keep them up-to-date was previously done only when
the name "Slide" was used for the pages, just like Impress, as Draw and
Impress share code. Now, the term "Page" is used instead of "Slide"
since 942d1d2ea59bf4605f2c464a6b29c967fa9f8de8 in Draw. This change,
fixes the above issue by also using the correct string consntant.

The patch is tested for Draw and Impress to make sure both are working
correctly now.

Change-Id: I55b4f56bd499d05f87f475d4c6cb3423247bf8d7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/164716
Tested-by: Jenkins
Reviewed-by: Stéphane Guillou <stephane.guillou@libreoffice.org>
Reviewed-by: Hossein <hossein@libreoffice.org>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/164760
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>